--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>EDWIN MATEO</title>
-  <link rel="stylesheet" href="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
