--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="middle-container">
 
     <div class="profile">
-      <img class="avatar" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\FAVICONS\yooo-modified.png" alt="photo">
+      <img class="avatar" src="yooo-modified.png" alt="photo">
       <h2>Hello.</h2>
       <p>I am a creative Website developer. I'm very good at what I do because I love my job.</p>
     </div>
