--- a/index.html
+++ b/index.html
@@ -56,15 +56,12 @@
     </div>
     <br>
     <div class="bottom-container">
-      <a class="footer-link" href="www.linkedin.com/in/elprofe-DR-947a95222">LinkedIn</a>
+      <a class="footer-link" href="www.linkedin.com/in/elprofe-dr-947a95222">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="file: index.html">Website</a>
+      <a class="footer-link" href="https://elprofe-dr.github.io/portfolio-new/">Website</a>
       <p class="end1">© 2022 Edwin Jimenez</p>
     </div>
   </div>
 </body>
-<!-- paragrafs are block elements-->
-<!--span element allows you to select (almost as if you highlight a text or element on the screen). spans themselves dont do very much unless they are used in conjuction with css. the span elemen is whats known as an inline display element. common inline elements are; images, spans and anchors-->
-<!-- a dive is a content divition element that is used to group and divide content in your page-->
 
 </html>
