--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         <p class="antifloat2">I'm a super fast learner. If learning was a super power, I'd be super hero. I love reading books and learning the books by heart. I use my learning hability to learn about anything. Oh, by the way my mother tongue is spanish. I set a goal to learn english in 10 months. At the end of the 10 months I was able to get a job as a custmer service rep at a callcenter becuase I could speak english very fluently.</p>
       </div>
     </div>
+    
+     <div class="workexperience">
+      <h2>Work Experience</h2>
+      <p class="PWE">I will not lie to you. My work Experience is just beginning to expand. As you might imagine I'm just starting to build my portfolio, but guess what? I'm still the best at what I do for a couple of reasons; #1. I'm highly committed. #2. I'm disciplined and #3. I just won't quit when things get tough. So yes, I'm your best option for the job.</p>
+      <a href="https://elprofe-dr.github.io/QRCODE/"><img class="QRCODE" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\FAVICONS\QRCODEJOB.png" alt="IMG"></a>
+    </div>
 
     <hr>
 
