--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <h2>Work Experience</h2>
       <p class="PWE">I will not lie to you. My work Experience is just beginning to expand. As you might imagine I'm just starting to build my portfolio, but guess what? I'm still the best at what I do for a couple of reasons; #1. I'm highly committed. #2. I'm disciplined and #3. I just won't quit when things get tough. So yes, I'm your best option for the job.</p>
       <a href="https://elprofe-dr.github.io/QRCODE/"><img class="QRCODE" src="QRCODEJOB.png" alt="IMG"></a>
+      <a href="https://elprofe-dr.github.io/perfume/"><img class="QRCODE" src="perfume.png" alt="img"></a>
     </div>
 
     <hr>
