--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>EDWIN MATEO</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@600&family=Freehand&family=Sacramento&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\styles.css">
 </head>
 
 <body>
@@ -49,12 +51,30 @@
      <div class="workexperience">
       <h2>Work Experience</h2>
       <p class="PWE">I will not lie to you. My work Experience is just beginning to expand. As you might imagine I'm just starting to build my portfolio, but guess what? I'm still the best at what I do for a couple of reasons; #1. I'm highly committed. #2. I'm disciplined and #3. I just won't quit when things get tough. So yes, I'm your best option for the job.</p>
-      <a href="https://elprofe-dr.github.io/QRCODE/"><img class="QRCODE" src="QRCODEJOB.png" alt="IMG"></a>
-      <a href="https://elprofe-dr.github.io/perfume/"><img class="QRCODE" src="perfume.png" alt="img"></a>
-      <a href="https://elprofe-dr.github.io/nft-preview-card/"><img class="QRCODE" src="nft preview card.png" alt="img"></a>
-
     </div>
-
+    
+    <div id="carouselproto" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <a href="https://elprofe-dr.github.io/QRCODE/"><img class="QRCODE" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\FAVICONS\QRCODEJOB.png" alt="IMG"></a>
+        </div>
+        <div class="carousel-item">
+          <a href="https://elprofe-dr.github.io/perfume/"><img class="QRCODE" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\perfume.png" alt="img"></a>
+        </div>
+        <div class="carousel-item">
+          <a href="https://elprofe-dr.github.io/nft-preview-card/"><img class="QRCODE" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\nft preview card.png" alt="img"></a>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselproto" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselproto" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    
     <hr>
 
     <div class="contact-me">
