--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>EDWIN MATEO</title>
-  <link rel="icon" href="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@600&family=Freehand&family=Sacramento&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -35,17 +35,17 @@
   </nav>
 
   <div class="head">
-    <img class="cloud2" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\cloud.png" alt="cloud image">
+    <img class="cloud2" src="cloud.png" alt="cloud image">
     <h1 class="Imedwin">I'm Edwin</h1>
     <h2 class="head1">a <span class="pro">pro</span>grammer</h2>
-    <img class="cloud" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\cloud.png" alt="cloud image">
-    <img class="" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\mountain.png" alt="mountain img">
+    <img class="cloud" src="cloud.png" alt="cloud image">
+    <img class="" src="mountain.png" alt="mountain img">
   </div>
 
   <div class="middle-container">
 
     <div class="profile">
-      <img class="avatar" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\FAVICONS\yooo-modified.png" alt="photo">
+      <img class="avatar" src="yooo-modified.png" alt="photo">
       <h2>Hello.</h2>
       <p>I am a creative Website developer. I'm very good at what I do because I love my job.</p>
     </div>
@@ -55,13 +55,13 @@
     <div class="">
       <h2>My Skills.</h2>
       <div class="skill-row1">
-        <img class="skillrow1img" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\FAVICONS\2620971.png" alt="image">
+        <img class="skillrow1img" src="2620971.png" alt="image">
         <h3>I'm a very creative Website developer</h3>
         <p class="antifloat1">I can develop anything using HTML, CSS, BOOTSTRAP and JAVA SCRIPT.</p>
       </div>
 
       <div class="skill-row2">
-        <img class="skillrow2img" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\FAVICONS\learning1.png" alt="image">
+        <img class="skillrow2img" src="learning1.png" alt="image">
         <h3>I'm an active learner</h3>
         <p class="antifloat2">I'm a super fast learner. If learning was a super power, I'd be super hero. I love reading books and learning the books by heart. I use my learning hability to learn about anything. Oh, by the way my mother tongue is
           spanish. I set a goal to learn english in 10 months. At the end of the 10 months I was able to get a job as a custmer service rep at a callcenter becuase I could speak english very fluently.</p>
@@ -108,7 +108,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="www.linkedin.com/in/elprofe-DR-947a95222">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="file:///C:/Users/bobo1/Desktop/WEBDEVELOPMENT/HTML-MY%20SITE/index.html">Website</a>
+      <a class="footer-link" href="https://elprofe-dr.github.io/portfolio-new/">Website</a>
       <p class="end1">© 2022 Edwin Jimenez</p>
     </div>
 
