--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
     <div id="carouselproto" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <a href="https://elprofe-dr.github.io/QRCODE/"><img class="QRCODE" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\FAVICONS\QRCODEJOB.png" alt="IMG"></a>
+          <a href="https://elprofe-dr.github.io/QRCODE/"><img class="QRCODE" src="QRCODEJOB.png" alt="IMG"></a>
         </div>
         <div class="carousel-item">
-          <a href="https://elprofe-dr.github.io/perfume/"><img class="QRCODE" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\perfume.png" alt="img"></a>
+          <a href="https://elprofe-dr.github.io/perfume/"><img class="QRCODE" src="perfume.png" alt="img"></a>
         </div>
         <div class="carousel-item">
-          <a href="https://elprofe-dr.github.io/nft-preview-card/"><img class="QRCODE" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\css\CSS MY SITE\images\nft preview card.png" alt="img"></a>
+          <a href="https://elprofe-dr.github.io/nft-preview-card/"><img class="QRCODE" src="nft preview card.png" alt="img"></a>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselproto" data-bs-slide="prev">
