--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
     <div id="carouselproto" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <a href="https://elprofe-dr.github.io/tindog/"><img class="QRCODE" src="tindog.png" alt="img"></a>
+        </div>
+        <div class="carousel-item">
           <a href="https://elprofe-dr.github.io/QRCODE/"><img class="QRCODE" src="QRCODEJOB.png" alt="IMG"></a>
         </div>
         <div class="carousel-item">
