--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         <div class="carousel-item">
           <a href="https://elprofe-dr.github.io/order-summary-/"><img class="QRCODE" src="carrousel portafolio.png" alt="img"></a>
         </div>
+        <div class="carousel-item">
+          <a href="https://elprofe-dr.github.io/profile-card-component/"><img class="QRCODE" src="Screenshot 2022-08-18 211148.png" alt="img"> </a>
+        </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselproto" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
