--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           <a href="https://elprofe-dr.github.io/tindog/"><img class="QRCODE" src="tindog.png" alt="img"></a>
         </div>
         <div class="carousel-item">
+          <a href="https://elprofe-dr.github.io/Huddle-landing-page-with-a-single-introductory-section/"><img class="QRCODE" src="portfolio carrousel img.png" alt="img"> </a>
+        </div>
+        <div class="carousel-item">
           <a href="https://elprofe-dr.github.io/QRCODE/"><img class="QRCODE" src="QRCODEJOB.png" alt="IMG"></a>
         </div>
         <div class="carousel-item">
