--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
     </div>
 
     <hr>
+    <div class="Projects">
+      <a href="https://elprofe-dr.github.io/simon-s-game/" style="text-decoration: none;">The Simon's Game!</a>
+    </div>
 
     <div class="contact-me">
       <h2>Get In Touch</h2>
