--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
     </div>
 
     <hr>
-    <div class="Projects">
-      <a href="https://elprofe-dr.github.io/simon-s-game/" style="text-decoration: none;">The Simon's Game!</a>
+    <div class="projects">
+      <h2>My Projects</h2>
+      <a href="https://elprofe-dr.github.io/simon-s-game/" style="text-decoration: none;" class="atag">The Simon's Game!</a>
     </div>
 
     <div class="contact-me">
