adding the counter app

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <div class="projects">
       <h2>My Projects</h2>
       <a href="https://elprofe-dr.github.io/simon-s-game/" style="text-decoration: none;" class="atag">The Simon's Game!</a>
+      <a href="https://elprofe-dr.github.io/counter-app/" style="text-decoration: none;" class="atag">Counter App</a>
     </div>
 
     <div class="contact-me">
