organazing things in my projects...

--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
     <hr>
     <div class="projects">
       <h2>My Projects</h2>
-      <a href="https://elprofe-dr.github.io/simon-s-game/" style="text-decoration: none;" class="atag">The Simon's Game!</a>
-      <a href="https://elprofe-dr.github.io/counter-app/" style="text-decoration: none;" class="atag">Counter App</a>
+      <ul>
+      <li><a href="https://elprofe-dr.github.io/simon-s-game/" style="text-decoration: none;" class="atag">The Simon's Game!</a></li>
+      <li><a href="https://elprofe-dr.github.io/counter-app/" style="text-decoration: none;" class="atag">Counter App</a></li>
+      </ul>
     </div>
 
     <div class="contact-me">
