--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="skill-row1">
         <img class="skillrow1img" src="2620971.png" alt="image">
         <h3>I'm a very creative Website developer</h3>
-        <p class="antifloat1">I can develop anything using HTML, CSS, BOOTSTRAP and JAVA SCRIPT.</p>
+        <p class="antifloat1">I can develop anything using HTML, CSS, BOOTSTRAP, JAVA SCRIPT, Jquery, Nodejs, Expressjs, The command line, Hyper terminal</p>
       </div>
 
       <div class="skill-row2">
@@ -51,8 +51,7 @@
 
     <div class="workexperience">
       <h2>Work Experience</h2>
-      <p class="PWE">I will not lie to you. My work Experience is just beginning to expand. As you might imagine I'm just starting to build my portfolio, but guess what? I'm still the best at what I do for a couple of reasons; #1. I'm highly
-        committed. #2. I'm disciplined and #3. I just won't quit when things get tough. So yes, I'm your best option for the job.</p>
+      <p class="PWE">I'm an intermediate level Full Stack software engineer. I'got plenty of experience already to build a website/web App from beginning to end, front and back end, completely functional, secure, and good looking (UI/UX).</p>
     </div>
 
     <div id="carouselproto" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
