--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       <li><a href="https://elprofe-dr.github.io/simon-s-game/" style="text-decoration: none;" class="atag">The Simon's Game!</a></li>
       <li><a href="https://elprofe-dr.github.io/counter-app/" style="text-decoration: none;" class="atag">Counter App</a></li>
       <li><a href="https://elprofe-dr.github.io/Random-number-generator/" style="text-decoration: none;" class="atag">Random Number Generator App</a></li>
+      <li><a href="https://elprofe-dr.github.io/random-color-generator/" style="text-decoration: none;" class="atag">Random Color Generator App</a></li>
       </ul>
     </div>
 
