--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       <li><a href="https://elprofe-dr.github.io/counter-app/" style="text-decoration: none;" class="atag">Counter App</a></li>
       <li><a href="https://elprofe-dr.github.io/Random-number-generator/" style="text-decoration: none;" class="atag">Random Number Generator App</a></li>
       <li><a href="https://elprofe-dr.github.io/random-color-generator/" style="text-decoration: none;" class="atag">Random Color Generator App</a></li>
+      <li><a href="https://elprofe-dr.github.io/palindrome-checker/" style="text-decoration: none;" class="atag">Palindrome Checker</a></li>
       </ul>
     </div>
 
